classDiagram
    Iphone --|> NavegadorInternet
    Iphone --|> AparelhoTelefonico
    Iphone --|> ReprodutorMusical
    Iphone : +String opcao
    class AparelhoTelefonico{
      +String randomNumer
      +Ligar()
      +RecebendoChamada(String numero)
      +Atender()
      +Conferencia(String numero0, String numero1)
      +IniciarCorreioVoz()
    }
    class NavegadorInternet{
      +ExibirPagina(String url)
      +AdicionarNova()
      +AtualizarPagina()
      +GoogleMaps()
    }
    class ReprodutorMusical{
      +Tocar()
      +Pausar()
      +SelecionarMusica()
      +ReproduzindoFilme()
    }